...

        <SearchView
            android:id="@+id/searchFacility"
            android:layout_width="0dp"
            android:layout_height="match_parent"
...

        <Spinner
            android:id="@+id/spinnerFacility"
            android:layout_width="0dp"
            android:layout_height="match_parent"
...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@drawable/layout_border"
        android:id="@+id/facility1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
...

        <TextView
            android:id="@+id/titleTextView_facility1"
            android:layout_width="200dp"
            android:layout_height="22dp"
...

        <TextView
            android:id="@+id/dateTextView_facility1"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
...

        <TextView
            android:id="@+id/contentTextView_facility1"
            android:layout_width="300dp"
            android:layout_height="60dp"
...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/facility2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/facility3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/facility4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/facility5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
...
        app:layout_constraintTop_toBottomOf="@+id/facility4">
        <TextView
            android:id="@+id/titleTextView_facility5"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
...

        <TextView
            android:id="@+id/dateTextView_facility5"
            android:layout_width="80dp"
            android:layout_height="22dp"
...

        <TextView
            android:id="@+id/contentTextView_facility5"
            android:layout_width="300dp"
            android:layout_height="60dp"
...

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_close_or_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
